# backend-api

./: .env.example  .firebaserc  .gitignore  DEPLOY.md  Makefile  README.md  app.py  cursor.md  firebase.json  firestore.indexes.json  local..env  main.py  pyproject.toml  requirements.txt
api/: auth.py  deps.py  field_definitions_public.py  invitation_access.py
api/routers/: __init__.py  addresses.py  attendees.py  event_types.py  events.py  field_definitions.py  invitations.py  locations.py  orders.py  payments.py  products.py  schedules.py  stands.py  tags.py  user_products.py  users.py
application/addresses/: __init__.py  create_address.py  delete_address.py  get_address.py  list_addresses.py  schemas.py  update_address.py
application/attendees/: __init__.py  check_in_attendee.py  create_attendee.py  (+4 more)
docs/: backend-business-rules.mdc
infrastructure/: config.py  firebase.py
scripts/: create_default_field_definitions.py
tests/: test_additional_info_validate_subset.py  test_create_invitation_guest_slot_persist.py  test_event_product_list_access.py  test_field_definitions_public.py  test_guest_active_checkout.py  test_guest_payment_pix.py  test_invitation_access_token.py  test_invitation_checkout.py  test_invitation_guest_slots.py  test_invitation_status_transitions.py  test_invitation_ticket_validation.py  test_order_additional_data.py  test_order_response.py  test_payment_approval_additional_data.py  test_product_inventory.py  test_product_type_migration.py  test_submit_guest_invitation.py
triggers/: payment_approval.py
utils/: errors.py  validators.py
(+213 files in other folders)
