[project]
name = "backend_api"
version = "0.1.0"
description = "Event social media API (FastAPI)"
requires-python = ">=3.12,<4"
package-mode = false
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "pydantic>=2.12.5,<3",
    "firebase-admin>=6.0,<7",
    "firebase-functions>=0.4.0,<1",
    "mangum>=0.17.0,<1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend_api*"]
